# cci

./: .cirrus.yml  .pylintrc  README.md  pyproject.toml  setup.cfg  setup.py  test.sh
cci/: __init__.py
examples/: hello-world.c
