[build-system]
# Specify the required build system.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bork]
project_name = "cci"

[tool.bork.zipapp]
enabled = true
main = "cci:main"

[tool.bork.release]
pypi = true
github = true
github_repository = "duckinator/cci"
strip_zipapp_version = true

[tool.bork.aliases]
# Runs *only* pylint and mypy. (Not the actual tests.)
lint = "pytest -k 'pylint or mypy' --pylint --mypy --verbose"
# Runs all tests and pylint.
#test = "pytest --pylint --mypy --verbose"
test = "./test.sh"
