[aliases]
# TODO: See if distclean can be made to remove dist/ as well.
distclean = rotate --keep=0 --match=.tar.gz,.whl clean
# After building, keep only the latest build.
build = sdist bdist_wheel rotate --keep=1 --match=.tar.gz,.whl

[metadata]
name = cci
version = 3.0.1
author = Ellen Marie Dash
author_email = me@duckie.co
description = Use the Clang + LLVM toolchain as an interpreter for C code.
long_description = file: README.md
url = https://github.com/duckinator/cci
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
install_requires =
    enforce
setup_requires =
    twine
    wheel
    distutils_twine~=3.0
python_requires = ~=3.6

[bdist]
bdist-base = build/bdist

[clean]
build-base = build
build-lib  = build/lib
bdist-base = build/bdist
all = True
