[metadata]
name = cci
version = 5.0.0
author = Ellen Marie Dash
author_email = me@duckie.co
description = Use the Clang + LLVM toolchain as an interpreter for C code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duckinator/cci
license = MIT
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
include_package_data = False
packages = find:
python_requires = ~=3.6

[options.extras_require]
tests =
    bork
    pytest
    pylint
    pytest-pylint
    pytest-mypy

[options.entry_points]
console_scripts =
    cci = cci:main
